fixed spacing navbar 1450 pxres

--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -14,7 +14,7 @@
 }
 
 .btn:hover {
-  padding: 6px 18px;
+
   transition: all 0.3s ease-out;
   background-color: transparent;
   background-color: #f5a700;
@@ -22,6 +22,12 @@
   border-radius: 4px;
   border: 2px solid var(--primary);
   transition: all 0.3s ease-out;
+}
+
+
+@media only screen and (min-width: 1450px) {
+
+  .btn{margin-right: 4rem;}
 }
 
 
