--- a/src/components/Main Content/ThreeSection.css
+++ b/src/components/Main Content/ThreeSection.css
@@ -236,11 +236,9 @@ padding-right: 1;
     /* background-color: #277ddc; */
     background-color: #dc8227;
  
-    /* height: 180px; */
-    /* margin-left: -40px; */
-    /* width: 600px; */
+
     z-index: 1;
-    /* margin-top: -8rem; */
+
     position: absolute;
     bottom: 1;
 
@@ -262,9 +260,7 @@ align-items: center;
   .a1  {
   
 
-    /* max-width: 100%;
-    height: auto;
-    width: auto; */
+ 
      margin-left: 1rem;
    min-width: 1200px;
     height: 900px; 
@@ -314,8 +310,7 @@ position: relative;
 
   .a5 {
     background-color: #277ddc;
-    /* grid-column: 1/2;
-    grid-row: 5/6; */
+ 
     height: 180px;
     margin-left: -40px;
     width: 600px;
